tests/cases/negative/typing/grading/zeroUseVarUsed.lam
-- we specify zero uses, but we use the variable
test : (l : [zero, zero] Level) -> Level
test = \l -> l
